Bug 268104 - Iconified shelf does not update size on panel resize
Summary: Iconified shelf does not update size on panel resize
Status: CLOSED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-shelf (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-10 02:50 UTC by David Palacio
Modified: 2011-04-18 04:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Vertical panel screenshot. Three shelf widgets on bottom. (6.69 KB, image/png)
2011-03-10 02:50 UTC, David Palacio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Palacio 2011-03-10 02:50:00 UTC
Created attachment 57822 [details]
Vertical panel screenshot. Three shelf widgets on bottom.

Version:           unspecified (using Devel) 
OS:                Linux

When put in a panel, the shelf initially fills the panel's height/weight but, on plasma restart or panel resize, the size is always incorrect.

Reproducible: Always

Steps to Reproduce:
Case 1:
Put shelf on panel.
Restart plasma

Case 2:
Put shelf on panel
Resize panel

Case Extra:
Run `plasmoidviewer -f vertical lancelot_part` and make the window small enough so that the widget iconifies.
Run `plasmoidviewer -f vertical folderview` for comparison.
Comment 1 David Palacio 2011-03-26 21:54:11 UTC
Reverting commit 1ed8e4ca6b53c2338d8da8e616752f0426038961 in kdelibs fixes this.
Comment 2 David Palacio 2011-04-17 23:52:54 UTC
Git commit fb0960361ba6cd83bed3a7f1d977e036e37f5ab3 by David Palacio.
Committed on 17/04/2011 at 23:55.
Pushed by davidp into branch 'master'.

Ensure icon is added to layout.

BUG: 268104
REVIEW: 101148

M  +4    -4    plasma/popupapplet.cpp     

http://commits.kde.org/kdelibs/fb0960361ba6cd83bed3a7f1d977e036e37f5ab3
Comment 3 Todd 2011-04-18 00:28:46 UTC
Is this related to bug 260388 ?
Comment 4 David Palacio 2011-04-18 04:37:17 UTC
On Mon, Apr 18, 2011 at 12:28:47AM +0200, Todd wrote:
> https://bugs.kde.org/show_bug.cgi?id=268104
> 
> 
> --- Comment #3 from Todd 2011-04-18 00:28:46 ---
> Is this related to bug 260388 ?
> 
No. This was caused by PopupApplet not adding an IconWidget to a layout.
Bug 260388 may be a bug in IconWidget itself.