Ensure icon is added to layout.

BUG: 268104
REVIEW: 101148